# insurance_calculator

./: .env  Dockerfile  Makefile  README.md  alembic.ini  invalid_rates.json  pyproject.toml  rates.json
docker_compose/: app.yaml  kafka.yaml
src/: main.py
src/applications/: router.py
src/applications/api/: api.py  schemas.py
src/core/: config.py
src/exceptions/: __init__.py  rate.py
src/infrastructure/: db_helper.py  di.py  kafka.py  repository.py
src/infrastructure/migrations/: env.py
src/infrastructure/models/: __init__.py  base.py  rate.py
tests/: conftest.py  fixtures.py  test_api.py
